force-app/main/default/objects/Boat_Appraisal__c/Boat_Appraisal__c.object-meta.xml
<CustomObject>
    <description>Electronic Boat Appraisal Sheet</description>
    <label>Boat Appraisal</label>
    <nameField>
        <label>Boat Appraisal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boat Appraisals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>