force-app/main/default/objects/Boat_Appraisal__c/fields/Aft_Side_Back_Curtains__c.field-meta.xml
<CustomField>
    <fullName>Aft_Side_Back_Curtains__c</fullName>
    <label>Aft Side &amp; Back Curtains</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>