force-app/main/default/objects/Boat_Appraisal__c/fields/Battery__c.field-meta.xml
<CustomField>
    <fullName>Battery__c</fullName>
    <label>Battery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>