force-app/main/default/objects/Boat_Appraisal__c/fields/Boat_Length__c.field-meta.xml
<CustomField>
    <fullName>Boat_Length__c</fullName>
    <inlineHelpText>In Feet (ft)</inlineHelpText>
    <label>Boat Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>