force-app/main/default/objects/Boat_Appraisal__c/fields/Boat_Make__c.field-meta.xml
<CustomField>
    <fullName>Boat_Make__c</fullName>
    <label>Boat Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>