force-app/main/default/objects/Boat_Appraisal__c/fields/Boat_Material__c.field-meta.xml
<CustomField>
    <fullName>Boat_Material__c</fullName>
    <label>Boat Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Fiberglass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>