force-app/main/default/objects/Boat_Appraisal__c/fields/Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Boat_Model__c</fullName>
    <label>Boat Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>