force-app/main/default/objects/Boat_Appraisal__c/fields/Boat_Package_Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Boat_Package_Problem_Description__c</fullName>
    <label>Boat Package Problem Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>