force-app/main/default/objects/Boat_Appraisal__c/fields/Boat_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Boat_Serial_Number__c</fullName>
    <label>Boat Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>