force-app/main/default/objects/Boat_Appraisal__c/fields/Comparable_New__c.field-meta.xml
<CustomField>
    <fullName>Comparable_New__c</fullName>
    <label>Comparable New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>