force-app/main/default/objects/Boat_Appraisal__c/fields/Condition_of_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_Trailer__c</fullName>
    <label>Condition of Trailer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>