force-app/main/default/objects/Boat_Appraisal__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Boat Appraisals</relationshipLabel>
    <relationshipName>Boat_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>