force-app/main/default/objects/Boat_Appraisal__c/fields/Does_Boat_Have_A_Floor__c.field-meta.xml
<CustomField>
    <fullName>Does_Boat_Have_A_Floor__c</fullName>
    <label>Does Boat Have A Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>