force-app/main/default/objects/Boat_Appraisal__c/fields/Does_Motor_Run_Well__c.field-meta.xml
<CustomField>
    <fullName>Does_Motor_Run_Well__c</fullName>
    <label>Does Motor Run Well</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>