force-app/main/default/objects/Boat_Appraisal__c/fields/Engine_Stroke_Type__c.field-meta.xml
<CustomField>
    <fullName>Engine_Stroke_Type__c</fullName>
    <label>Engine Stroke Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-Stroke</fullName>
            </value>
            <value>
                <fullName>2-Stroke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>