force-app/main/default/objects/Boat_Appraisal__c/fields/Estimated_Trade_Value_Before_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Trade_Value_Before_Inspection__c</fullName>
    <label>Estimated Trade Value Before Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>