force-app/main/default/objects/Boat_Appraisal__c/fields/Extended_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty__c</fullName>
    <label>Extended Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>