force-app/main/default/objects/Boat_Appraisal__c/fields/Family_Friend_Boat_Value__c.field-meta.xml
<CustomField>
    <fullName>Family_Friend_Boat_Value__c</fullName>
    <label>Family/Friend Boat Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>