force-app/main/default/objects/Boat_Appraisal__c/fields/Floor_Material__c.field-meta.xml
<CustomField>
    <fullName>Floor_Material__c</fullName>
    <label>Floor Material</label>
    <length>254</length>
    <type>Text</type>
</CustomField>