force-app/main/default/objects/Boat_Appraisal__c/fields/Horsepower__c.field-meta.xml
<CustomField>
    <fullName>Horsepower__c</fullName>
    <label>Horsepower</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>