force-app/main/default/objects/Boat_Appraisal__c/fields/Internet_Search_Value__c.field-meta.xml
<CustomField>
    <fullName>Internet_Search_Value__c</fullName>
    <label>Internet Search Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>