force-app/main/default/objects/Boat_Appraisal__c/fields/Is_Fiberglass_Blistering__c.field-meta.xml
<CustomField>
    <fullName>Is_Fiberglass_Blistering__c</fullName>
    <label>Is Fiberglass Blistering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>