force-app/main/default/objects/Boat_Appraisal__c/fields/Livewell_Working__c.field-meta.xml
<CustomField>
    <fullName>Livewell_Working__c</fullName>
    <label>Livewell Working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>