force-app/main/default/objects/Boat_Appraisal__c/fields/Make_of_Fishfinder__c.field-meta.xml
<CustomField>
    <fullName>Make_of_Fishfinder__c</fullName>
    <label>Make of Fishfinder</label>
    <length>254</length>
    <type>Text</type>
</CustomField>