force-app/main/default/objects/Boat_Appraisal__c/fields/Motor_Make__c.field-meta.xml
<CustomField>
    <fullName>Motor_Make__c</fullName>
    <label>Motor Make</label>
    <length>254</length>
    <type>Text</type>
</CustomField>