force-app/main/default/objects/Boat_Appraisal__c/fields/Motor_Model__c.field-meta.xml
<CustomField>
    <fullName>Motor_Model__c</fullName>
    <label>Motor Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>