force-app/main/default/objects/Boat_Appraisal__c/fields/Motor_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Serial_Number__c</fullName>
    <label>Motor Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>