force-app/main/default/objects/Boat_Appraisal__c/fields/Motor_Year__c.field-meta.xml
<CustomField>
    <fullName>Motor_Year__c</fullName>
    <label>Motor Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>