force-app/main/default/objects/Boat_Appraisal__c/fields/Notes_on_Motor__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Motor__c</fullName>
    <label>Notes on Motor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>