force-app/main/default/objects/Boat_Appraisal__c/fields/Online_Listing_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Online_Listing_URL_2__c</fullName>
    <label>Online Listing URL 2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>