force-app/main/default/objects/Boat_Appraisal__c/fields/Power_Tilt_Trim__c.field-meta.xml
<CustomField>
    <fullName>Power_Tilt_Trim__c</fullName>
    <label>Power Tilt &amp; Trim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>