force-app/main/default/objects/Boat_Appraisal__c/fields/Problems_with_Current_Boat_Package__c.field-meta.xml
<CustomField>
    <fullName>Problems_with_Current_Boat_Package__c</fullName>
    <label>Problems with Current Boat Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>