force-app/main/default/objects/Boat_Appraisal__c/fields/Related_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Boat Appraisals</relationshipLabel>
    <relationshipName>Boat_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>