force-app/main/default/objects/Boat_Appraisal__c/fields/Swing_Tongue__c.field-meta.xml
<CustomField>
    <fullName>Swing_Tongue__c</fullName>
    <label>Swing Tongue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>