force-app/main/default/objects/Boat_Appraisal__c/fields/Trailer_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Capacity__c</fullName>
    <label>Trailer Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>