force-app/main/default/objects/Boat_Appraisal__c/fields/Trailer_Make__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Make__c</fullName>
    <label>Trailer Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>