force-app/main/default/objects/Boat_Appraisal__c/fields/Trailer_Model__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Model__c</fullName>
    <label>Trailer Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>