force-app/main/default/objects/Boat_Appraisal__c/fields/Trailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Type__c</fullName>
    <label>Trailer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bunk Trailer</fullName>
            </value>
            <value>
                <fullName>Roller Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>