force-app/main/default/objects/Boat_Appraisal__c/fields/Trailer_Year__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Year__c</fullName>
    <label>Trailer Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>