force-app/main/default/objects/Boat_Appraisal__c/fields/Trolling_Motor_Model__c.field-meta.xml
<CustomField>
    <fullName>Trolling_Motor_Model__c</fullName>
    <label>Trolling Motor Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>