force-app/main/default/objects/Boat_Appraisal__c/fields/Type_of_Prop__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Prop__c</fullName>
    <label>Type of Prop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Stainless Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>