force-app/main/default/objects/Boat_Appraisal__c/fields/Windshield_screen__c.field-meta.xml
<CustomField>
    <fullName>Windshield_screen__c</fullName>
    <label>Windshield/Screen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>